--- a/.env
+++ b/.env
@@ -2,4 +2,6 @@ MYSQL_USER=user
 MYSQL_ROOT_PASSWORD=password
 MYSQL_PASSWORD=password
 MYSQL_DATABASE=connectfour
+MYSQL_PORT=3306
+MYSQL_HOST=localhost
 MYSQL_ALLOW_EMPTY_PASSWORD=no
