--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "mysql2": "^2.3.3",
     "sequelize": "^6.21.4",
     "sequelize-cli": "^6.4.1",
-    "sqlite3": "^5.0.11"
+    "sqlite3": "^5.0.11",
+    "status-code-enum": "^1.0.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
